--- a/tracker/templates/tracker/base.html
+++ b/tracker/templates/tracker/base.html
@@ -8,6 +8,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <script src="{% static 'script.js' %}"></script>
+    {% block js %}
+    {% endblock %}  
     <title>BusDood</title>
 </head>
 <body>
