--- a/tracker/templates/tracker/register.html
+++ b/tracker/templates/tracker/register.html
@@ -9,23 +9,23 @@
         <form class="form" action="{% url 'register' %}" method="POST">
             {% csrf_token %}
 
-            <div class="form-elemet">
+            <div class="form-element">
                 <input placeholder="Username" type="text" name="username" class="form-control" required>
             </div>
 
-            <div class="form-elemet">
+            <div class="form-element">
                 <input placeholder="Email" type="text" name="email" class="form-control" required>
             </div>
 
-            <div class="form-elemet">
+            <div class="form-element">
                 <input placeholder="Password" type="password" name="password" class="form-control" required>
             </div>
 
-            <div class="form-elemet">
+            <div class="form-element">
                 <input placeholder="Confirm Password" type="password" name="cpassword" class="form-control" required>
             </div>
 
-            <div class="form-elemet">
+            <div class="form-element">
                 <input type="radio" id="dayscholar" name="user_type" value="day" required>
                 <label for="dayscholar" class="white">Dayscholar</label>
                 
@@ -33,13 +33,13 @@
                 <label for="hosteller" class="white">Hosteller</label>
             </div>
 
-            <div class="form-elemet">
+            <div class="form-element">
                 {% if message %}   
                     <p class="error">{{ message }}</p>
                 {% endif %}
             </div>
 
-            <div class="form-elemet">
+            <div class="form-element">
                 <button class="btn submit-btn" type="submit">Register</button>                
             </div>
         </form>
