--- a/tracker/templates/tracker/bookings.html
+++ b/tracker/templates/tracker/bookings.html
@@ -4,14 +4,46 @@
 
     <div class="announcements-container">
         <h2 class="display-2h">Weekend Buses</h2>
-        <!-- Add bus button -->
-        <a href="{% url 'addwbus' %}"><button class="btn submit-btn announcement-btn">Add Weekend Bus</button></a>
-
-        {% if slots %}
-            {{ slots }}
-        {% else %}
-            <h2>No available buses</h2>
+        {% if user.user_type == 'inc' %}
+            <a href="{% url 'addwbus' %}"><button class="btn submit-btn announcement-btn">Add Weekend Bus</button></a>
         {% endif %}
+        <div class="bus-info-container">
+            {% if slots %}
+                {% for slot in slots %}
+                    <div class="bus-info">
+                        <div class="bus-info-left">
+                            <h3 class="display-2h">{{ slot.bus }}</h3>
+                        </div>
+                        <div class="bus-info-mid">
+                            <p class="display-1">{{ slot.route }}</p>
+                            <p class="display-1">{{ slot.date }}</p>
+                            <p class="display-1">{{ slot.time }}</p>
+                        </div>
+                        {% if user.user_type != 'inc' %}
+                            {% if user.username not in booked_users %}
+                                <div class="bus-info-right">
+                                    <a href="{% url 'bookbus' slot.id user.id %}"><button class="btn submit-btn announcement-btn">Book</button></a>
+                                </div>
+                            {% else %}
+                                <div class="bus-info-right">
+                                    <a href="{% url 'cancelbus' slot.id user.id %}"><button class="btn cancel-btn announcement-btn">Cancel</button></a>
+                                </div>
+                            {% endif %}
+                        {% endif %}
+                        
+                        {% if user.user_type == 'inc' %}
+                            <div class="bus-info-right">
+                                <a href="{% url 'deletebus' slot.id %}"><button class="btn delete-btn announcement-btn">Delete</button></a>
+                            </div>
+                        {% endif %}
+                    </div>
+
+                {% endfor %}
+            {% else %}
+                <h2>No available buses</h2>
+            {% endif %}
+        </div>
+        
     </div>
 
 {% endblock %}
