--- a/tracker/templates/tracker/addwbus.html
+++ b/tracker/templates/tracker/addwbus.html
@@ -7,12 +7,12 @@
     <form class="form bus-form" action="{% url 'addwbus' %}" method="POST">
         {% csrf_token %}
 
-        <div class="form-element">
+        <div class="form-element bus-inputs">
             {{ form.bus }}
             {{ form.route }}
         </div>
 
-        <div class="form-element">
+        <div class="form-element date-element">
             {{ form.date }}
         </div>
 
@@ -20,8 +20,9 @@
             {{ form.time }}
         </div>
 
-        <button class="btn submit-btn announcement-btn" type="submit">Add Bus</button>
-
+        <div class="form-element">
+            <button id="bus-btn" class="btn submit-btn announcement-btn" type="submit">Add Bus</button>
+        </div>
     </form>
 </div>
 
