--- a/tracker/templates/tracker/register.html
+++ b/tracker/templates/tracker/register.html
@@ -42,6 +42,9 @@
             <div class="form-element">
                 <button class="btn submit-btn" type="submit">Register</button>                
             </div>
+            <div class="form-element">
+                <p class="help-text">Already have an account?<a class="help-links" href="{% url 'login' %}">Login here</a></p>
+            </div>
         </form>
     </div>
 
