--- a/tracker/static/style.css
+++ b/tracker/static/style.css
@@ -17,6 +17,15 @@ body{
     display: flex;
     flex-direction: column;
 }
+.user{
+    justify-content: space-between;
+    width: 30%;
+    background-color: rgba(0,0,0,0.8);
+    color: white;
+    padding: 1rem;
+    align-items: center;
+    border-radius: 5px;
+}
 #map{
     height: 60vh;
     width: 85%;
@@ -38,10 +47,16 @@ body{
 }
 .right-box, .left-box{
     display: flex;
-    justify-content: center;
+}
+.right-box{
+    justify-content: flex-end;
+}
+.left-box{
+    justify-content: flex-start;
+    padding-inline: 2rem;
 }
 .menu{
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.8);
     border-radius: 5px;
     padding-right: 6.5rem;
     padding-left: 5rem;
@@ -63,18 +78,19 @@ body{
     width: 100%;
 }
 .form{
-    margin: 1rem;
+    margin-block: 1rem;
+    margin-inline:2rem;
     display: flex;
     flex-direction: column;
     gap: 2rem;  
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.8);
     border-radius: 5px;
     padding-block: 3rem;
-    padding-inline: 5rem;
-    width: fit-content;
+    padding-inline: 2rem;
+    width: 60%;
 }
 .form-element{
-    width: 100%;
+    width: 90%;
 }
 .form-control{
     padding-inline:1rem;
@@ -99,10 +115,26 @@ body{
     border-radius: 5px;
 }
 #time{
-    width: 90%;
+    width: 95%;
 }
 .form.bus-form{
     display: flex;
+    width: 80%;
+}
+.form-element.bus-inputs{
+    display: flex;
+}
+.date-element{
+    display: flex;
+}
+.form-date{
+    width: 20%;
+    margin-inline:1rem;
+    flex: 1;
+}
+.form-control.input-field.bus-fields{
+    width: 50%;
+    margin-inline: 1rem;
 }
 .route-field{
     padding-inline: 2rem;
@@ -206,6 +238,9 @@ body{
 .display-2h.page-title{
     color: black;
 }
+.user{
+    margin: 1rem;
+}
 .ham{
     position: absolute;
     right: 1rem;
@@ -263,6 +298,10 @@ body{
     font-style: italic;
     font-weight: 600;
 }
+.bx.bxs-bell{
+    font-size: 1.2rem;
+    margin-top: 6px;
+}
 .delete-btn{
     background-color: rgb(255, 63, 63);
     color: white;
@@ -270,6 +309,48 @@ body{
 .cancel-btn{
     background-color: rgb(189, 161, 0);
     color: white;
+}
+#bus-btn{
+    width: 10rem;
+    margin-inline: 1rem;
+}
+#selector{
+    display: flex;
+    gap: 2rem;
+}
+.profile-img{
+    width: 250px;
+}
+.profile-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 20%;
+    margin: auto;
+    background-color: rgba(0,0,0,0.8);
+    color: white;
+}
+.profile-info, .profile-bottom{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255,255,255,0.8);
+    color: black;
+    padding-inline: 1rem;
+    border-radius: 5px;
+    margin: 1rem;
+}
+.profile-top{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.profile-bottom{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 @media (max-width: 1300px){
     .ham{
@@ -285,18 +366,41 @@ body{
     #menu{
         display: none;
     }
+    #time{
+        width: 70%;
+    }
     .menu{
-
         width: 100%;
         display: flex;
         justify-content: center;
+    }
+    .form{
+        margin-inline:0.5rem;
+    }
+    .bus-inputs{
+        flex-direction: column;
+    }
+    .form-control.input-field.bus-fields{
+        width: 80%;
+    }
+    .bus-info{
+        flex-direction: column;
+    }
+    .date-element{
+        display: flex;
+        flex-direction: column;
+    }
+    .form-date{
+        width: 80%;
     }
     .navbar{
         flex-direction: column;
     }
     .left-box, .right-box{
-
         width: 100%;
+    }
+    .right-box{
+        justify-content: center;
     }
     .logo{
         justify-content: flex-start;
@@ -313,7 +417,9 @@ body{
     .page-title{
         font-size: 1.5rem;
     }
-
+    .user{
+        flex-direction: column;
+    }
     .announcements-container{
         width: 70%;
     }
@@ -323,5 +429,15 @@ body{
     }
     .form.bus-form{
         padding:1rem;
+    }
+    .form-element.announcement-fileds{
+        width: 70%;
+    }
+    .form.big{
+        width: 80%;
+    }
+    #selector{
+        display: flex;
+        flex-direction: column;
     }
 }
