--- a/tracker/static/style.css
+++ b/tracker/static/style.css
@@ -352,10 +352,22 @@ body{
     flex-direction: column;
     align-items: center;
 }
+.home-container{
+    margin: auto;
+    background-color: rgba(0,0,0,0.8);
+    color: white;
+    padding: 2rem;
+    border-radius: 5px;
+    width: 30%;
+    min-height: 70vh;
+    display: flex;
+    justify-content: center;
+}
 @media (max-width: 1300px){
     .ham{
         display: block;
     }
+
     .menu-list{
         flex-direction: column;
         align-items: center;
