--- a/tracker/templates/tracker/home.html
+++ b/tracker/templates/tracker/home.html
@@ -2,5 +2,19 @@
 
 {% block content %}
     <!-- Home page of the website -->
-    
+    <!-- Track smarter, together
+To access this exclusive feature for SSNites,click here!
+ -->
+  
+    <div class="home-container">
+        <div class="home-left" style="font-size:1.3rem;">
+            <h1>Track smarter, together</h1>
+            {% if not user.is_authenticated %}
+                <p>To access this exclusive feature for SSNites
+                    <a style="text-decoration: underline;color: white;" href="{% url 'login' %}">Login</a>                
+                </p>
+            {% endif %}
+        </div>
+
+    </div>
 {% endblock %}
