--- a/tracker/templates/tracker/profile.html
+++ b/tracker/templates/tracker/profile.html
@@ -7,13 +7,21 @@
                 <img class="profile-img" src="{% static 'user.png' %}" alt="profile image">
             </div>
             <div class="profile-info">
-                <p>Username</p>
                 <h2 class="display-2h">{{ user.username }}</h2>
             </div>
         </div>
         <div class="profile-bottom">
-            <p class="display-1">{{ user.email }}</p>
-            <p class="display-1">{{ user.user_type }}</p>
+		
+            <p class="display-1"><b>{{ user.email }}</b></p>
+            <p class="display-1"><b>
+            	{% if user.user_type == 'hos' %}
+            		Hosteller
+            	{% elif user.user_type == 'day' %}
+            		Day Scholor
+            	{% elif user.user_type == 'adm' %}
+            		Admin
+            	{% endif %}
+            </p></b>
         </div>
     </div>
 {% endblock %}
