--- a/tracker/templates/tracker/track.html
+++ b/tracker/templates/tracker/track.html
@@ -15,7 +15,12 @@
         <div class="route-selecter">
             {{ form.route  }}
             <button id="get-route" class="btn submit-btn location-btn">Get Location</button><br><br>
-            <button id="set-location" class="btn submit-btn location-btn" style="background-color: rgb(129, 129, 0);">Set Location</button>
+            <p>Are you on the bus?</p>
+            <label class="switch">
+                <input id="set-location" type="checkbox">
+                <span class="slider round"></span>
+            </label>
+            <!-- <button id="set-location" class="btn submit-btn location-btn" style="background-color: rgb(129, 129, 0);">Set Location</button> -->
         </div>
     </div>
     <div id="map">
@@ -24,54 +29,98 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCw0ddIErnntB_jNO1mEbWTg7tZya699cQ&libraries=places"></script>
     <script defer>
         let pos;
+        let bus_marker;
+        const SSN = { lat: 12.751817768930716, lng: 80.20390072611363 };
+        const map = new google.maps.Map(document.getElementById("map"), {
+                zoom: 13,
+                center: SSN
+            });
         function getlocation(route){
-            navigator.geolocation.getCurrentPosition(
-                (position) => {
-                    pos = {
-                        lat: position.coords.latitude,
-                        lng: position.coords.longitude,
-                    };
-                    fetch(`/setlocation/${route}`, {
+            let id;
+            let options;
+            const target = { latitude: 12.751817768930716, longitude: 80.20390072611363 };
+        
+            function success(pos) {
+                const crd = pos.coords;
+                console.log(pos.coords);
+                fetch(`setlocation/${route}`,{
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
                         'X-CSRFToken': '{{ csrf_token }}'
                     },
                     body: JSON.stringify({
-                        'location': pos
+                        'latitude': crd.latitude,
+                        'longitude': crd.longitude
                     })
                 })
-                .then(res => res.json())
-                .then(data => {
-                    console.log(data);
-                })
-                    },
-                    () => {
-                        return null;
-                    }); 
+
+
+
+                if (document.getElementById('set-location').value == "on"){
+                    console.log("Locaiton turned off");
+                    navigator.geolocation.clearWatch(id);
+                }
+
+                if (target.latitude === crd.latitude && target.longitude === crd.longitude) {
+                    console.log('Congratulations, you reached the target');
+                    navigator.geolocation.clearWatch(id);
+                }
+            }
+
+            function error(err) {
+                console.error(`ERROR(${err.code}): ${err.message}`);
+            }
+
+            options = {
+                enableHighAccuracy: true,
+                timeout: 5000,
+                maximumAge: 0
+            };
+
+            id = navigator.geolocation.watchPosition(success, error, options);
 
         }
-        const SSN = { lat: 12.751817768930716, lng: 80.20390072611363 };
-        const map = new google.maps.Map(document.getElementById("map"), {
-                zoom: 13,
-                center: SSN
-            });
+
 
         const setLocation = document.getElementById('set-location');
         setLocation.onclick = () => {
             const route = document.getElementById('routeNo').value;
-            getlocation(route);
+            console.log(route);
+            if (route === ''){
+                alert('Please select a route');
+            }
+            else{
+                console.log(setLocation.value)
+                if (setLocation.value === 'on'){
+                    setLocation.value = 'off';
+                    getlocation(route);
+                }
+                else if (setLocation.value === 'off'){
+                    setLocation.value = 'on';
+                    // getlocation(route);
+                    
+                }
+            }
+            // getlocation(route);
         }
 
         const getRoute = document.getElementById('get-route');
         getRoute.onclick = () => {
             const route = document.getElementById('routeNo').value;
-            fetch(`/route/${route}`)
-            .then(res => res.json())
-            .then(data => {
-                console.log(data);
-                calcRoute(data.lat, data.lng, data.waypoints, route);
-            })
+            if (route === ''){
+                alert('Please select a route');
+            }
+            else{
+                fetch(`/route/${route}`)
+                .then(res => res.json())
+                .then(data => {
+                    console.log(data);
+
+                    calcRoute(data.lat, data.lng, data.waypoints, route);
+                })
+            }
+
         }
         
         
@@ -95,7 +144,6 @@
                     stopover: true
                   })
             }
-            console.log(waypoints);
             request = {
                 origin: source,
                 destination: SSN,
@@ -131,7 +179,7 @@
             .then(res => res.json())
             .then(data => {
                 console.log(data);
-                const bus_marker = new google.maps.Marker({
+                bus_marker = new google.maps.Marker({
                     position: {lat: data.lat, lng: data.lng},
                     icon: "{% static 'location.png' %}",
                     map: map,
