--- a/tracker/templates/tracker/home.html
+++ b/tracker/templates/tracker/home.html
@@ -1,13 +1,8 @@
 {% extends 'tracker/base.html' %}
 
 {% block content %}
-    <!-- Home page of the website -->
-    <!-- Track smarter, together
-To access this exclusive feature for SSNites,click here!
- -->
-  
     <div class="home-container">
-        <div class="home-left" style="font-size:1.3rem;">
+        <div class="home-left">
             <h1>Track smarter, together</h1>
             {% if not user.is_authenticated %}
                 <p>To access this exclusive feature for SSNites
