--- a/tracker/templates/tracker/viewbookings.html
+++ b/tracker/templates/tracker/viewbookings.html
@@ -10,7 +10,7 @@
                     <p><b>{{ useri.username }}</b></p>
                 </div>
                 <div class="user-right-box">
-                    <a><button class="btn submit-btn">View User</button></a>
+                    <a href="{% url 'profile' useri.username %}"><button class="btn submit-btn">View User</button></a>
                 </div>
             </div>
         {% endfor %}
